trunk/Compiladores/src/capitulo_3/MiniJavaParser.java
package capitulo_3;
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
public class MiniJavaParser implements MiniJavaParserConstants {
  public static void main(String args []) throws ParseException
  {
    System.out.println("Testing Start! \u005cn Enter: ");
    MiniJavaParser parser = new MiniJavaParser(System.in);
    parser.Start();

   }

  static final public int Program() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDecl();
    }
          {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(ID);
    jj_consume_token(LKEY);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    jj_consume_token(ID);
    jj_consume_token(RPAREN);
    jj_consume_token(LKEY);
    Statement();
    jj_consume_token(RKEY);
    jj_consume_token(RKEY);
  }

  static final public void ClassDecl() throws ParseException {
    if (jj_2_1(3)) {
      jj_consume_token(CLASS);
      jj_consume_token(ID);
      jj_consume_token(LKEY);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case ID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        VarDecl();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        MethodDecl();
      }
      jj_consume_token(RKEY);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        jj_consume_token(CLASS);
        jj_consume_token(ID);
        jj_consume_token(EXTENDS);
        jj_consume_token(ID);
        jj_consume_token(LKEY);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case BOOLEAN:
          case ID:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
          VarDecl();
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_5;
          }
          MethodDecl();
        }
        jj_consume_token(RKEY);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case ID:
      jj_consume_token(ID);
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_2(2)) {
        jj_consume_token(INT);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ID);
    jj_consume_token(SEMI);
  }

  static final public void MethodDecl() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    jj_consume_token(ID);
    jj_consume_token(LPAREN);
    FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LKEY);
    label_6:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_6;
      }
      VarDecl();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case SYSOUT:
      case LKEY:
      case ID:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Exp();
    jj_consume_token(SEMI);
    jj_consume_token(RKEY);
  }

  static final public void FormalList() throws ParseException {
    Type();
    jj_consume_token(ID);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_8;
      }
      FormalRest();
    }
  }

  static final public void FormalRest() throws ParseException {
    jj_consume_token(COMMA);
    Type();
    jj_consume_token(ID);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LKEY:
      jj_consume_token(LKEY);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case SYSOUT:
        case LKEY:
        case ID:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        Statement();
      }
      jj_consume_token(RKEY);
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Exp();
      jj_consume_token(RPAREN);
      Statement();
      jj_consume_token(ELSE);
      Statement();
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Exp();
      jj_consume_token(RPAREN);
      Statement();
      break;
    case SYSOUT:
      jj_consume_token(SYSOUT);
      jj_consume_token(LPAREN);
      Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_4(2)) {
        jj_consume_token(ID);
        jj_consume_token(GETS);
        Exp();
        jj_consume_token(SEMI);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          jj_consume_token(ID);
          jj_consume_token(LBRACKET);
          Exp();
          jj_consume_token(RBRACKET);
          jj_consume_token(GETS);
          Exp();
          jj_consume_token(SEMI);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Start() throws ParseException {
        System.out.println("\u005ctTry: S - > E");
    Program();
                System.out.println("A Analise Sintatica foi realizada com sucesso");
  }

  static final public void Op() throws ParseException {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
         System.out.println("\u005ctTry: Op - > Plus");
      t = jj_consume_token(PLUS);
                                                                 System.out.print("Op --> Plus");System.out.println("("+t+")");
      break;
    case MINUS:
         System.out.println("\u005ctTry: Op - > Minus");
      t = jj_consume_token(MINUS);
                                                                   System.out.print("Op --> Minus");System.out.println("("+t+")");
      break;
    case TIMES:
         System.out.println("\u005ctTry: Op - > Times");
      t = jj_consume_token(TIMES);
                                                                   System.out.print("Op --> Times");System.out.println("("+t+")");
      break;
    case LAND:
         System.out.println("\u005ctTry: Op -- > Land");
      t = jj_consume_token(LAND);
                                                                    System.out.print("Op --> Land");System.out.println("("+t+")");
      break;
    case LE:
         System.out.println("\u005ctTry: Op -- > Less than");
      t = jj_consume_token(LE);
                                                                     System.out.print("Op --> Less than");System.out.println("("+t+")");
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void T() throws ParseException {
        Token t1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
         System.out.println("\u005ctTry: T -- > TRUE");
      t1 = jj_consume_token(TRUE);
                                                               System.out.println("T --> TRUE("+t1+")");
      break;
    case FALSE:
   System.out.println("\u005ctTry: T -- > FALSE");
      t1 = jj_consume_token(FALSE);
                                                             System.out.println("T --> FALSE(" +t1 + ")");
      break;
    case ID:
   System.out.println("\u005ctTry: T -- > ID");
      t1 = jj_consume_token(ID);
                                                       System.out.println("T --> ID(" +t1 + ")");
      break;
    case THIS:
   System.out.println("\u005ctTry: T -- > THIS");
      t1 = jj_consume_token(THIS);
                                                           System.out.println("T --> THIS(" +t1 + ")");
      break;
    case INTEGER_LITERAL:
   System.out.println("\u005ctTry: T -- > INTEGER_LITERAL");
      t1 = jj_consume_token(INTEGER_LITERAL);
                                                                                 System.out.println("T --> INTEGER_LITERAL(" +t1 + ")");
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void K() throws ParseException {
    if (jj_2_5(2)) {
                  System.out.println("\u005ctTry: . id [ ExpList ]");
      jj_consume_token(DOT);
      jj_consume_token(ID);
      jj_consume_token(LPAREN);
      ExpList();
      jj_consume_token(RPAREN);
                                                                                                               System.out.println("K -- > . id [ ExpList ]");
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
   System.out.println("\u005ctTry: K --> ID (__)");
        jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case DOT:
        case ID:
          K();
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
                                                                                     System.out.println("K --> ID (__)");
        break;
      case INT:
   System.out.println("\u005ctTry: K --> int [ E ]");
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        Exp();
        jj_consume_token(RBRACKET);
                                                                                          System.out.println("K -- > int [ E ]");
        break;
      case DOT:
   System.out.println("\u005ctTry: K -- > . length ");
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
                                                                     System.out.println("K -- > . length ");
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void R() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
    case TIMES:
    case LAND:
    case LE:
   System.out.println("\u005ctTry: R --> Op E");
      Op();
      Exp();
                                                          System.out.println("R - > Op E");
      break;
    case INT:
    case DOT:
    case ID:
   System.out.println("\u005ctTry: R --> K");
      K();
                                                System.out.println("R - > K");
      break;
    case LBRACKET:
   System.out.println("\u005ctTry: R -- > [E] L");
      jj_consume_token(LBRACKET);
      Exp();
      jj_consume_token(RBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        L();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
                                                                                       System.out.println("R --> [ E ] L");
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void L() throws ParseException {
         System.out.println("\u005ctTry:L -- > [E] L|vazio ");
    jj_consume_token(LBRACKET);
    Exp();
    jj_consume_token(RBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      L();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
                                                                                                   System.out.println("R - > K");
  }

  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case TRUE:
    case FALSE:
    case THIS:
    case ID:
   System.out.println("\u005ctTry: E --> T R|vazio");
      T();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
      case TIMES:
      case LAND:
      case LE:
      case INT:
      case LBRACKET:
      case DOT:
      case ID:
        R();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
                                                               System.out.println("Exp --> T R|vazio");
      break;
    case NEW:
   System.out.println("\u005ctTry: E --> new K");
      jj_consume_token(NEW);
      K();
                                                           System.out.println("E --> new K");
      break;
    case NOT:
   System.out.println("\u005ctTry: E --> not E");
      jj_consume_token(NOT);
      Exp();
                                                             System.out.println("Exp --> not E");
      break;
    case LPAREN:
   System.out.println("\u005ctTry: E --> ( E )");
      jj_consume_token(LPAREN);
      Exp();
      jj_consume_token(RPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
      case TIMES:
      case LAND:
      case LE:
      case INT:
      case LBRACKET:
      case DOT:
      case ID:
        R();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
                                                                               System.out.println("Exp --> ( E )");
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpRest() throws ParseException {
    jj_consume_token(COMMA);
    Exp();
                         System.out.println("ExpRest --> , E");
  }

  static final public void ExpList() throws ParseException {
    Exp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
      ExpRest();
    }
                             System.out.println("ExpList --> E ExpRest*");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LKEY)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_12()) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(GETS)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniJavaParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[24];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x10000,0x1800000,0x20000,0x1800000,0x20000,0x10000,0x1000000,0x800000,0x1a000000,0x0,0x1a000000,0x1a000000,0x0,0xf80,0xc0002000,0x800000,0x800000,0x0,0x800f80,0x0,0x800f80,0x800f80,0xc0003000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x1000,0x0,0x1000,0x0,0x0,0x1000,0x0,0x1020,0x400,0x1020,0x20,0x1000,0x0,0x1001,0x1200,0x1200,0x80,0x1280,0x80,0x1280,0x1280,0x1007,0x400,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[5];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MiniJavaParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiniJavaParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MiniJavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MiniJavaParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MiniJavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public MiniJavaParser(MiniJavaParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(MiniJavaParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }
